--- a/app/window.html
+++ b/app/window.html
@@ -1,8 +1,30 @@
-<!DOCTYPE html>
-<html>
+<html lang="en" ng-app="ChromeKeePass" ng-csp>
   <head>
+  	<link rel="stylesheet" href="../lib/angular-material.min.css">
+    <link rel="stylesheet" href="app.css">
   </head>
-  <body>
-    <div>Hello, world!</div>
+  <body layout="column" ng-controller="AppCtrl">
+    <md-toolbar layout="row">
+      <button ng-click="toggleSidenav('left')" hide-gt-sm class="menuBtn">
+        <span class="visually-hidden">Menu</span>
+      </button>
+      <h1>Hello World</h1>
+    </md-toolbar>
+    <div layout="row" flex>
+        <md-sidenav layout="column" class="md-sidenav-left md-whiteframe-z2" md-component-id="left" md-is-locked-open="$media('gt-sm')">
+          
+        </md-sidenav>
+        <div layout="column" flex id="content">
+            <md-content layout="column" flex class="md-padding">
+              
+            </md-content>
+        </div>
+    </div>
+    <!-- Angular Material Dependencies -->
+    <script src="../lib/angular.min.js"></script>
+    <script src="../lib/angular-animate.min.js"></script>
+    <script src="../lib/angular-aria.min.js"></script>
+    <script src="../lib/angular-material.min.js"></script>
+    <script src="app.js"></script>
   </body>
 </html>
