--- a/app/window.html
+++ b/app/window.html
@@ -1,6 +1,7 @@
 <html lang="en" ng-app="ChromeKeePass" ng-csp>
   <head>
   	<link rel="stylesheet" href="../lib/angular-material.min.css">
+    <link rel="stylesheet" href="../lib/angular-csp.css">
     <link rel="stylesheet" href="app.css">
   </head>
   <body layout="column" ng-controller="AppCtrl">
@@ -8,7 +9,7 @@
       <button ng-click="toggleSidenav('left')" hide-gt-sm class="menuBtn">
         <span class="visually-hidden">Menu</span>
       </button>
-      <h1>Hello World</h1>
+      <h1>ChromeKeePass</h1>
     </md-toolbar>
     <div layout="row" flex>
         <md-sidenav layout="column" class="md-sidenav-left md-whiteframe-z2" md-component-id="left" md-is-locked-open="$media('gt-sm')">
